<resources>
    <string name="app_name">books_312316433_313601130</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Books</string>
    <string name="title_library">Library</string>
    <string name="title_activities">Activities</string>
    <string name="title_my_stories">My Stories</string>
    <string name="title_messages">Messages</string>
    <string name="submit">Submit</string>
    <string name="story_genres">Story Genres</string>
    <string name="story_tags">Story Tags</string>
    <string name="story_synopsis">Story Synopsis</string>
    <string name="story_title">Story Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="addtags">Add Tags</string>
    <string name="enterText">Type items like this (Bob, Lucy,..)</string>
    <string name="click_here_to_add">Click here to add</string>
    <string name="add_categories">Add Categories</string>
    <string name="emptyFields">Some fields are empty!</string>
    <string name="chapter_content">Chapter Content</string>
    <string name="chapter_title">Chapter Title</string>
    <string name="selectpick">Select Picture</string>
    <string name="action_settings">Settings</string>
    <string name="imp_click_to_add">Click to add picture</string>
    <string name="fname">First Name</string>
    <string name="lname">Last name</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="pickone">Pick One :</string>
    <string name="itemupdated">Updated successfully !</string>
    <string name="itemnotupdated">Update was not successful!</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="addcharacters">Add Characters</string>
    <string name="answerYes">Yes</string>
    <string name="answerNo">No</string>
    <string name="askContinue">Do you want to continue removal ?</string>
    <string name="itemDeleted">Item deleted</string>
    <string name="post_a_message_to_your_followers">Post a message to your followers</string>
    <string name="post_activity">Post Activity</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="username">Username</string>
    <string name="send_message">Send Message</string>
    <string name="messageSent">Message Sent</string>
    <string name="enterMsg">Enter Comment</string>
    <string name="reply">Reply</string>
    <string name="failed_to_upload_chapter">failed to upload chapter</string>
    <string name="activityPosted">Activity posted</string>
    <string name="activityNotPosted">Cannot post activity</string>
    <string name="uploadFailed">Failed to upload</string>
    <string name="PleaseWait">Please wait</string>
    <string name="failedToSaveMessage">Failed to save message</string>
    <string name="uploadSuccess">Upload Successful</string>
    <string name="failedImage">Failed to load image</string>
    <string name="search_for_story">Search for a Story</string>
    <string name="addedTovaourites">Added to favourites</string>
    <string name="removedFromFavourites">Removed from favourites</string>
    <string name="addReply">Add a reply</string>
    <string name="removeItem">Remove Item ?</string>
    <string name="unfollowUser">Unfollow user ?</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="genres">Genres</string>
    <string name="tags">Tags</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="followers">Followers: %1$d</string>
    <string name="send_to">Send to</string>
    <string name="followers_emp">Followers</string>
    <string name="newMessage">New Message</string>
    <string name="postActivity">Post New Activity</string>
    <string name="discover">Discover</string>
    <string name="logIn">Log In</string>
    <string name="editProfile">Edit Profile</string>
    <string name="postStory">Post a Story</string>
    <string name="add_genres">Add Genres</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_to_current_reading">Add to Current Reading</string>
    <string name="written_by">Written by:</string>
    <string name="published_on">Published On:</string>
    <string name="rated">Rated:</string>
    <string name="language">Language</string>
    <string name="favourites">Favourites</string>
    <string name="comments">Comments</string>
    <string name="length">Length</string>
    <string name="completed">Completed</string>
    <string name="genre">Genre</string>
    <string name="chapters">Chapters:</string>
    <string name="add_chapters">Add Chapters</string>
    <string name="chapters_list">Chapters List</string>
    <string name="socials">Socials</string>
    <string name="channel_name">Books_channel_name</string>
    <string name="refresh">Refresh</string>


    <string-array name="ratings">
        <item>Ten</item>
        <item>Twelve</item>
        <item>Fourteen</item>
        <item>Sixteen</item>
        <item>Eighteen</item>
    </string-array>

    <string-array name="choice">
        <item>From Gallery</item>
        <item>Capture Image</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
        <item>Hebrew</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="discoverHeader">
        <item>Categories</item>
        <item>Recommended</item>
        <item>Newest</item>
        <item>Genres</item>
    </string-array>

    <string-array name="libraryHeader">
        <item>Current Reads</item>
    </string-array>

    <string-array name="myStoriesHeader">
        <item>My Stories</item>
        <item>Deleted Stories</item>
    </string-array>

    <string-array name="messagesHeader">
        <item>Index</item>
        <item>Sent</item>
        <item>Trash</item>
    </string-array>

    <string-array name="storyGenre">
        <item>Action</item>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Crossover</item>
        <item>Drama</item>
        <item>Sport</item>
        <item>Family</item>
        <item>Fantasy</item>
    </string-array>

    <string-array name="storyCategory">
        <item>Animies And Mangas</item>
        <item>Bands And Musicians</item>
        <item>Cartoons</item>
        <item>Celebrities</item>
        <item>Contests</item>
        <item>Movies</item>
        <item>Games</item>
        <item>Original Stories</item>
        <item>Books</item>
        <item>Mythologies and Legends</item>
        <item>Comics</item>
        <item>Series, Novels And TV</item>
        <item>Youtubers And Social Media Stars</item>

    </string-array>
    <string-array name="mActivitiesHeader">
        <item>Activity Feed</item>
    </string-array>

    <string-array name="profileHeaders">
        <item>Stories</item>
        <item>Favourite Stories</item>
        <item>Currently Reading</item>
    </string-array>

</resources>
