<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/discover" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_equalizer_black_24dp"
        android:title="@string/title_library" />
    <item
        android:id="@+id/navigation_mStories"
        android:icon="@drawable/ic_stories_black_24dp"
        android:title="@string/title_my_stories" />

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_activities" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_outline_black_24dp"
        android:title="@string/title_messages" />

</menu>
