<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tags_lbl_st_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tags" />

    <TextView
        android:id="@+id/cates_lbl_st_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/tags_lbl_st_view"
        android:layout_below="@id/tags_txt_st_view"
        android:layout_marginTop="5dp"
        android:text="@string/categories" />

    <TextView
        android:id="@+id/genres_lbl_st_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_cates_st_view"
        android:layout_alignStart="@id/tags_lbl_st_view"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/genres" />

    <TextView
        android:id="@+id/tags_txt_st_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tags_lbl_st_view"
        android:layout_alignTop="@id/tags_lbl_st_view"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/txt_cates_st_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/cates_lbl_st_view"
        android:layout_alignTop="@id/cates_lbl_st_view"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/txt_genres_st_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/genres_lbl_st_view"
        android:layout_alignTop="@id/genres_lbl_st_view"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
         />
</RelativeLayout>