<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/story_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="@dimen/card_album_radius"
        android:elevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_st_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_st_writtenby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_st_title"
                android:layout_alignStart="@id/text_st_title"
                android:layout_marginTop="5dp"
                android:text="@string/written_by" />

            <TextView
                android:id="@+id/txt_st_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_st_writtenby"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/txt_st_writtenby"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/st_thumb"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_below="@id/txt_st_writtenby"
                android:maxHeight="108dp"
                android:maxWidth="108dp"
                android:scaleType="fitXY"
                android:layout_alignStart="@id/text_st_title"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/txt_st_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/st_thumb"
                android:layout_toEndOf="@id/st_thumb"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/label_st_chapters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/txt_st_status"
                android:layout_below="@id/txt_st_status"
                android:layout_marginTop="5dp"
                android:text="@string/chapters" />

            <TextView
                android:id="@+id/label_st_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/label_st_chapters"
                android:layout_alignStart="@id/txt_st_status"
                android:text="@string/length" />

            <TextView
                android:id="@+id/label_st_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_thumb"
                android:layout_alignStart="@id/text_st_title"
                android:layout_marginTop="10dp"
                android:text="@string/categories" />

            <TextView
                android:id="@+id/lbl_gnres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/text_st_title"
                android:layout_below="@id/txt_st_categories"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/genre" />

            <TextView
                android:id="@+id/txt_st_chaptersCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/label_st_chapters"
                android:layout_toEndOf="@id/label_st_chapters"
                android:layout_marginStart="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_st_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/label_st_length"
                android:layout_alignTop="@id/label_st_length"
                android:layout_marginStart="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_st_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/lbl_gnres"
                android:layout_toEndOf="@id/lbl_gnres"
                android:layout_alignStart="@id/txt_st_categories"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_st_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/label_st_categories"
                android:layout_toEndOf="@id/label_st_categories"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
